# webshop-example

./: .gitignore  Cargo.toml  README.md  index.html  mprocs.yaml  tailwind.config.js
src/: app.rs  main.rs
src/components/: debug.rs  logo.rs  mod.rs  navbar.rs
src/context/: cart.rs
src/contexts/: cart.rs
src/pages/: checkout.rs  home.rs  mod.rs  not_found.rs  shop.rs
style/: generated.css
