[package]
name = "webshop-example"
version = "0.1.0"
edition = "2021"
description = "A webshop example page"
readme = "README.md"
repository = "https://github.com/Kanerix/webshop-example"
license = "Apache-2.0"
keywords = ["leptos", "trunk", "wasm"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
leptos = { version = "0.4.1", default-features = false, features = ["csr", "nightly"] }
leptos_router = { version = "0.4.1", default-features = false, features = ["csr", "nightly"] }


