[package]
name = "webshop-example"
version = "0.1.0"
edition = "2021"
description = "A webshop example page"
readme = "README.md"
repository = "https://github.com/Kanerix/webshop-example"
license = "Apache-2.0"
keywords = ["leptos", "trunk", "wasm"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
leptos = {git = "https://github.com/leptos-rs/leptos", default-features = false, features = ["csr", "nightly"] }
leptos_router = { git = "https://github.com/leptos-rs/leptos", default-features = false, features = ["csr", "nightly"] }
log = "0.4.19"
